--- a/.github/workflows/flutter_web.yaml
+++ b/.github/workflows/flutter_web.yaml
@@ -22,7 +22,7 @@ jobs:
         run: flutter config --enable-web
 
       - name: Install dependencies
-        runn: flutter packages get
+        run: flutter packages get
       
       - name: flutter build web
 
