--- a/.github/workflows/flutter_web.yaml
+++ b/.github/workflows/flutter_web.yaml
@@ -25,6 +25,7 @@ jobs:
       run: flutter packages get
     
     - name: flutter build web
+      run: flutter build web
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
